- added editor for map-level udmf fields outside of blocks. loading/saving preserve any map level udmf properties (for forward compatibility with future UDMF stuff). (see Edit -> Map UDMF info...)
- renamed "Deaf" to "Ambush", as it's more correct and matches the Doom source code itself.
- fixed linedef special information being blank in the info panel sometimes
- fixed longstanding DB2 crash related to make sectors + undo/redo
- fixed longstanding DB2 bug where vertices would not merge correctly under some circumstances
- Disabled ally/strifeally from the udmf configs as it does the same thing as friendly. you can still set it manually using the UDMF window.
- fixed a serious performance issue on maps with a lot of geometry (for example, vela pax map01)
- fixed a crash loading malformed patches & sprites (for example, daedalus.wad)
- minor tweaks to logging system

version 2.1.3.3
=====================
- fixed bug in 2.1.3.2 with linedef/thing edit windows, please upgrade
- including zokumbsp-1.0.10-beta4. Doom 1/2 configs have zokumbsp extensions listed under linedef specials now. You need to build your map with zokumbsp to use them. There's chance they won't work with anything other than vanilla/chocolate, so be aware!
- optimized sector label positioning algorithm, should have speedups on initial map load and whenever you do anything that changes geometry
- fix for slow loading of maps that use a lot of sidedef compression

version 2.1.3.2
=====================
- linedef / thing / sector edit windows partially loaded when you open a map. vertex one loads first time you open it. once loaded all these should open about 50-70ms faster, in case of individual objects selected it should open in 4-8ms.
- change some window scaling stuff
- fixed plugins issue from 2.1.3.1 (sorry)
- minor bugfixes

version 2.1.3.1
=====================
- fix for issue with Thing/Sector/Linedef/Vertex Edit Windows on smaller resolutions
- fix issue w resizing thing edit window
