@@ -307,6 +307,26 @@ gridsetup
 	allowscroll = true;
 }
 
+incrementtag
+{
+	title = "Tag Increase By 1";
+	category = "edit";
+	description = "Increment tag of all selected elements by 1.";
+	allowkeys = true;
+	allowmouse = true;
+	allowscroll = true;
+}
+
+decrementtag
+{
+	title = "Tag Decrease By 1";
+	category = "edit";
+	description = "Decrement tag of all selected elements by 1.";
+	allowkeys = true;
+	allowmouse = true;
+	allowscroll = true;
+}
+
 griddec		// Note, these were incorrectly swapped before, hence the wrong action name
 {
 	title = "Grid Increase";
