@@ -6,6 +6,7 @@ version 2.1.3.4
 - big optimizations to drawing new geometry, brand new algorithms for detecting inner sectors as well as splitting lines by vertices. please let me know if there are any issues.
 - added editor for map-level udmf fields outside of blocks. loading/saving preserve any map level udmf properties (for forward compatibility with future UDMF stuff). (see Edit -> Map UDMF info...)
 - renamed "Deaf" to "Ambush", as it's more correct and matches the Doom source code itself.
+- new hotkey for incrementing/decrementing tag of currently selected element in classic 2d modes. you have to set the hotkey yourself in the menu
 - fixed linedef special information being blank in the info panel sometimes
 - fixed longstanding DB2 crash related to make sectors + undo/redo
 - fixed longstanding DB2 bug where vertices would not merge correctly under some circumstances
